--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+
+
+
     ext.kotlin_version = '1.7.10'
     repositories {
         google()
@@ -8,6 +11,14 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+}
+
+plugins {
+    // ...
+
+    // Add the dependency for the Google services Gradle plugin
+    id("com.google.gms.google-services") version "4.4.0" apply false
+
 }
 
 allprojects {
