--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   animated_text_kit: ^4.2.2
+  firebase_core: ^2.24.0
+  cloud_firestore: ^4.13.3
+  firebase_auth: ^4.15.0
 
 dev_dependencies:
   flutter_test:
