--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^2.24.0
   cloud_firestore: ^4.13.3
   firebase_auth: ^4.15.0
+  modal_progress_hud_nsn: ^0.4.0
 
 dev_dependencies:
   flutter_test:
